2007-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq.c: Spacing.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/startup/bspstart.c: Moved most of the remaining CPU Table
	fields to the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq.c, shared/irq/irq_supp.h: Correct conditionals and
	includes.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/i8259.c, shared/irq/irq.h, shared/irq/irq_supp.h,
	shared/irq/openpic_i8259_irq.c: BSP_disable_irq_at_pic(),
	openpic_disable_irq(), BSP_irq_disable_at_i8259s() now return
	0/1 if irq was disabled/enabled prior to disabling.
	irq_supp.h now exports a inline helper routine for scanning
	a list of shared handlers; to be used by PIC drivers.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>

	* shared/openpic/openpic.c shared/openpic/openpic.h,
	shared/irq/irq_init.c: added more parameters to 
	openpic_init() so that more details of the configuration
	can be overridden/set from the BSP. Moved setup of
	the EPIC-specific EOI delay from BSP code into openpic_init()
	using the new 'epic_freq' parameter.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>
	* shared/openpic/openpic.c, shared/openpic/openpic.h:
	- eliminated conditional compilation (#ifdef mpc8240)
	  The difference in register-layout between the EPIC
	  and the std. openPIC is handled by an offset parameter
	  which can be set at run-time (initialization) with
	  a new routine 'openpic_set_src_offset()'.
	- allow BSP to define symbol BSP_OPEN_PIC_BIG_ENDIAN
	  which builds the driver for big-endian register access
	  (mpc8540).